2017-09-05  Karl Berry  <karl@tug.org>
        and Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* luatex.c (IS_SPC_OR_EOL): new macro.
	(topenin): use it, instead of ISBLANK.
	(input_line): remove only trailing space characters
	instead of using ISBLANK.
	See also analogous change in lib/texmfmp.c.
	Original bug report from Evan Aad,
	http://tug.org/pipermail/tex-k/2017-August/002801.html.
	Fix a bug to skip BOM (w32 only).

2017-02-07  Luigi Scarso <luigi.scarso@gmail.com>

	* luaffi/: First attempt to implement the ffi module in lua
	compatible with the ffi module of luajit.

2015-11-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* luatex.c: Improve a little (w32 only).

2015-10-31  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex/inputstack.w: Sync with the upstream.

2015-10-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex/mlist.w: Sync with the upstream.

2015-10-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* luatex.c: Sync with the upstream.
	* font/luatexfont.h, font/writetype2.w: Sync with the upstream.

2015-10-08  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* lua/lepdflib.cc, tex/texnodes.h, tex/texnodes.w, NEWS:
	Sync with the upstream.
	* luatex.c: beta-0.81.0.

2015-10-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/libluatex.am, am/luafontforge.am: Rearrange to compile the
	luafontloader/src/* files as part of liblua(jit)tex.a, such that
	there is only one libff.a used for LuaTeX and LuaJITTeX.

2015-10-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Sync with the upstream trunk.
	* image/epdf.h: Support Visual Studio 2010 for log().

2015-10-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Completely sync with the upstream trunk.
	Changed files are
	font/writecff.w, font/writefont.w,
	lua/lnodelib.c, lua/lpdflib.c, lua/luatoken.w,
	luafontloader/fontforge/fontforge/lookups.c,
	luafontloader/fontforge/fontforge/parsettf.c,
	luafontloader/fontforge/fontforge/parsettfatt.c,
	luafontloader/fontforge/fontforge/splinefont.h,